# zato

./: .tool-versions
code/zato-common/: pyproject.toml  setup.py
code/zato-common/src/zato/common/: api.py  json_schema.py
code/zato-common/src/zato/common/aux_server/: base.py
code/zato-common/src/zato/common/crypto/: api.py
code/zato-common/src/zato/common/ipc/: server.py
code/zato-common/src/zato/common/odb/: api.py
code/zato-common/src/zato/common/odb/query/: __init__.py
code/zato-common/src/zato/common/test/: __init__.py  apispec_.py  rest_client.py
code/zato-common/src/zato/common/util/: api.py  config.py  scheduler.py
code/zato-common/src/zato/common/util/sql/: __init__.py
code/zato-common/test/zato/common/: test_imap.py  test_kvdb.py  test_match.py  test_scheduler.py  test_util.py
code/zato-server/: pyproject.toml  requirements.txt  setup.py
code/zato-server/src/zato/server/: jwt_.py  main.py  sso.py  startup_callable.py  store.py
code/zato-server/src/zato/server/apispec/: model.py
code/zato-server/src/zato/server/apispec/spec/: openapi.py
code/zato-server/src/zato/server/connection/: __init__.py  amqp_.py  queue.py  vault.py  wrapper.py
code/zato-server/src/zato/server/file_transfer/: api.py  event.py  snapshot.py
code/zato-server/src/zato/server/generic/: connection.py
code/zato-server/src/zato/server/service/: __init__.py  meta.py
code/zato-server/test/zato/connection/: test_def_kafka.py  test_email_imap.py  test_outconn_ldap.py
code/zato-server/test/zato/hl7/fhir_/: test_hl7_fhir_read.py
(+50 files in other folders)
