[tool.poetry]
name = "zato-common"
version = "1.0.0"
description = "Zato Common"
authors = ["ReadCloud <development@readcloud.com>"]
packages = [{ include = "zato.common", from = 'src/zato' }]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
